--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
         "express": "^4.17.1",
         "express-handlebars": "^5.2.0",
         "express-session": "^1.17.1",
+        "handlebars": "^4.7.6",
         "method-override": "^3.0.0",
         "mongoose": "^5.11.5",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0"
-    },
-    "devDependencies": {
-        "handlebars": "^4.7.6"
     }
 }
